added events details to routes, controllers, validation, swagger, and server
